<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_main">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:src="@drawable/loginbg" />


    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/gotham"
            android:gravity="center"
            android:shadowColor="#57000000"
            android:text="@string/login_text"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="28sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="311dp"
            android:layout_height="135dp"
            android:src="@drawable/images"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/no"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:autofillHints=""
            android:fontFamily="@font/calibri"
            android:hint="PNR / Teacher_ID"
            android:inputType="text"
            android:textColor="#000000"
            android:textSize="24sp"
            tools:targetApi="jelly_bean" />
        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:autofillHints=""
            android:fontFamily="@font/calibri"
            android:hint="@string/username_p"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/passwd"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:autofillHints=""
            android:fontFamily="@font/calibri"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="186dp"
            android:layout_height="58dp"
            android:layout_gravity="left"
            android:layout_marginLeft="110dp"
            android:spinnerMode="dropdown"
            android:textAlignment="gravity"
            android:textStyle="bold" />

        <Button
            android:id="@+id/passwd_change"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="44dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/buttonshape"
            android:fontFamily="@font/gotham"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>


</RelativeLayout>